--- a/stylesheet.less
+++ b/stylesheet.less
@@ -314,7 +314,7 @@ header {
                         border: 1px solid @color-swatch7;
                         z-index: 500;
                         padding: 0;
-                        margin: 7px 0 0 0;
+                        margin: 0;
                         li {
                             display: block;
                             width: 100%;
