--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1669,13 +1669,14 @@ footer {
             }
         }
         &.content {
-            p {
+            .bk-content-text {
                 font-family: @font-swatch5-font-family;
                 font-size: @font-swatch5-font-size;
                 font-weight: @font-swatch5-font-weight;
                 line-height: @font-swatch5-line-height;
                 color: @font-swatch5-color;
                 letter-spacing: @font-swatch5-letter-spacing;
+                padding: 1.5em 0;
             }
         }
     }
