change order of properties for logo widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -84,17 +84,18 @@ header {
             float: none;
             margin: 0 auto -70px;
             overflow: hidden;
+            display: -webkit-flex;
             display: -webkit-flexbox;
             display: -ms-flexbox;
-            display: -webkit-flex;
             display: flex;
             -webkit-flex-align: center;
-            -ms-flex-align: center;
             -webkit-align-items: center;
+            -ms-flex-align: center;
             align-items: center;
             text-align: center;
             a {
                 margin: 0 auto;
+                display: inline-block;
                 .logo {
                     max-width: 130px;
                     max-height: 130px;
