--- a/default.twig
+++ b/default.twig
@@ -5,7 +5,7 @@
 <div class="bk-pt-default">
 
 <div class="nav-extended wrapper">
-    {{widget('extendednavigation', 'navigationheader', {"align":"centre"})|raw}}
+    {{widget('extendednavigation', 'navigationheader', {"align":"center"})|raw}}
 </div>
 
 <header>
