change height and padding for blog search on tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -188,6 +188,7 @@ header {
         @media @tablet {
             width: 90%;
             margin: 0 5%;
+            padding: 1.2em 1em 1.5em;
         }
         .blog-search-form {
             width: auto;
@@ -230,7 +231,7 @@ header {
             }
             @media @tablet {
                 float: none;
-                height: 46px;
+                height: 47px;
             }
         }
     }
