fix DT-1107, fix play/pause button on the slideshow widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -563,10 +563,13 @@ blockquote:before {
             border-radius: 4px;
             left: 45%;
             top: 43%;
+            width: 60px;
+            height: 60px;
             &:after {
                 color: #fff;
-                letter-spacing: -4px;
-                top: 2px;
+                top: 6px;
+                font-size: 30px;
+                line-height: 50px;
             }
             @media @mobile {
                 width: 40px;
@@ -574,6 +577,7 @@ blockquote:before {
                 &:after {
                     font-size: 15px;
                     line-height: 36px;
+                    top: 4px;
                 }
             }
         }
