add margin to footer for mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1703,6 +1703,9 @@ a.ecom-product-go-to-checkout-btn {
 footer {
     text-align: center;
     padding: 2em 0;
+    @media @mobile {
+        margin: 0 5%;
+    }
     .widget{
         &.profile {
                 display: block;
