add margin to blog search

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -171,6 +171,7 @@ header {
     min-height: 5em;
     .widget.blogsearch {
         padding: 1.2em 1em;
+        margin: 0;
         height: 35px;
         .blog-search-form {
             float: right;
@@ -216,6 +217,7 @@ header {
 .widget {
     &.blogsearch {
         height: 42px;
+        margin: 1em 0;
         .clearfix;
         .blog-search-form {
             width: auto;
