fix nav overlay on editor

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -469,6 +469,12 @@ header {
     display: none;
 }
 
+.widget.extendednavigation .bk-overlay {
+    @media @tablet {
+        width: 100% !important;
+    }
+}
+
 
 /* ========
     BUTTONS
