--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1679,7 +1679,7 @@ a.ecom-product-go-to-checkout-btn {
                             line-height: normal;
                             color: darken(@color-swatch5,10%);
                             border: 1px solid darken(@color-swatch1,7%);
-                            .border-radius(3px);
+                            border-radius: 3px;
                             -webkit-box-shadow: 0px 2px 0px darken(@color-swatch1,10%);
                             -moz-box-shadow:    0px 2px 0px darken(@color-swatch1,10%); 
                             box-shadow:         0px 2px 0px darken(@color-swatch1,10%); 
